fixed: hambuger z-index

--- a/style.css
+++ b/style.css
@@ -323,16 +323,16 @@ margin-bottom: 10px;
  .header{
     display: flex;
     flex-direction: row;
-    background-color: #e6d813;
+    /* background-color: #e6d813; */
     margin-top: -1px;
     margin-bottom: -1px;
  }
 .menu-items{
     text-align: center;
-    position: absolute;
+    position: fixed;
     padding: 5rem;
-    top: 0.5rem;
-    left: 12rem;
+    top: -1.5rem;
+    left: 13rem;
     list-style: none;
     opacity: 0;
     font-size: 2rem;
@@ -341,6 +341,7 @@ margin-bottom: 10px;
     border-radius: 0.25em;
     transform: translateX(-10%);
     transition: transform 100ms ease-in-out, opacity 200ms;
+    z-index: 1;
 }
 
 .menu-items li{
@@ -359,9 +360,11 @@ margin-bottom: 10px;
 
 .check {
     background-color: #000000;
-    height: 2rem;
-    width: 2rem;
-    z-index: 222;
+    position: relative;
+    height: 3rem;
+    width: 3rem;
+    opacity: 0;
+    z-index: 3;
 }
 
 .check:hover {
@@ -377,18 +380,19 @@ margin-bottom: 10px;
 .ham-menu {
     height: 3rem;
     width: 3rem;
-    position: absolute;
-    z-index: 2;
+    position: fixed;
+    top: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     border-radius: 0.25em;
+    z-index: 2;
 }
 
 .ham-menu .line {
-    background-color: white;
+    background-color: rgb(0, 0, 0);
     border-radius: 1em;
-    width: 2rem;
+    width: 2.8rem;
     height: 0.25rem;
 }
 
